--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "service.js",
   "scripts": {
     "start": "node service.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test":  "jest --watchAll --colors --coverage" ,  
+    "test:ci": "jest --ci --colors --coverage --passWithNoTests"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,8 @@
   },
   "homepage": "https://github.com/Bonganjalo/containerized-service#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "jest": "^24.9.0",
